Left aligned image fix and add date on blog detail page

--- a/htdocs/assets/css/text_page.css
+++ b/htdocs/assets/css/text_page.css
@@ -4011,10 +4011,11 @@ ul.sub_menu {
         margin-left: auto;
         margin-right: auto; }
       .rich_text .inline_image.left {
-        width: 100%;
-        text-align: left; }
+        /*width: 100%;*/
+        text-align: left; 
+        float: left; }
         .rich_text .inline_image.left img {
-          width: 50%; }
+          width: 90%; }
       .rich_text .inline_image.drop-left {
         float: left;
         margin-left: -6rem;
